# PhotoForge

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md  batch-processing.md  checklist.md  component-architecture.md  image-processing.md  local-ai-privacy.md  ollama-provider.md  performance.md  phase-1-1-audit.md  phase-1-1-results.md  phase-2-plan.md  phase-2-results.md  phase-3-results.md  phase-4-results.md  phase-5-results.md  phase-6-results.md  plugin-specification.md  privacy.md  professional-tools.md  roadmap.md  workflows.md
plugins/: README.md  example-planner.json
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/application/: batch.rs  editor.rs  mod.rs
src-tauri/src/commands/: components.rs  editor.rs  mod.rs  ollama.rs  planner.rs  professional.rs
src-tauri/src/components/: engines.rs  mod.rs  ollama.rs  performance.rs  planners.rs  registry.rs  runtime.rs
src-tauri/src/domain/: components.rs  mod.rs  models.rs  ollama.rs  pipeline.rs  planner.rs  plugins.rs  professional.rs
src-tauri/src/image_processing/: analysis.rs  inspection.rs  mod.rs  processor.rs  professional.rs  restoration.rs
src-tauri/src/infrastructure/: component_io.rs  image_io.rs  metadata.rs  mod.rs  model_adapter.rs  preferences.rs  workflow_io.rs
src/lib/components/: AnalysisPanel.svelte  AnalysisPanel.test.ts  (+20 more)
tests/: README.md
(+16 files in other folders)
